# ParSGA

./: .gitmodules  CMakeLists.txt  README.md
src/: csr_align.hpp  graph_util.hpp  parallel_exe.cpp  preprocessing.cpp  preprocessing.hpp  read_csr.hpp  serial_exe.cpp
